<resources>
    <string name="app_name">Student Database</string>
    <string name="name_label_text">Name : </string>
    <string name="age_label_text">Age : </string>
    <string name="enter_your_name_prompt">Enter Your Name</string>
    <string name="enter_your_age_prompt">Enter your age</string>
    <string name="id_label_text">ID : </string>
    <string name="save_button_text">Save</string>
    <string name="next_button_text">Next</string>
    <string name="title_activity_display_student_ids">Student ID List</string>
    <string name="enter_your_id_prompt">Enter Your ID</string>
    <string name="edit_student_info_title">Edit Student Info</string>
    <string name="clear_button_text">Clear</string>
    <string name="update_button_text">Update</string>
    <string name="title_add_new_student">Add New Student</string>
    <string name="enter_contact_details">Enter Contact details</string>


    <string-array name="school_spinner">
        <item>School of Business and Economics</item>
        <item>School of Engineering and Physical Sciences</item>
        <item>School of Humanities and Social Sciences</item>
        <item>School of Health and Life Sciences</item>
    </string-array>

</resources>