<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uicontroller.AddStudentActivity">

    <TextView
        android:id="@+id/department_label"
        android:layout_width="62dp"
        android:layout_height="22dp"
        android:layout_marginTop="30dp"
        android:text="@string/age_label_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/school_label"
        app:layout_constraintTop_toBottomOf="@+id/school_label" />

    <TextView
        android:id="@+id/school_label"
        android:layout_width="63dp"
        android:layout_height="22dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/name_label_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dob_label"
        android:layout_width="62dp"
        android:layout_height="23dp"
        android:layout_marginTop="30dp"
        android:text="@string/id_label_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/department_label"
        app:layout_constraintTop_toBottomOf="@+id/department_label" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_activity_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="75dp" />

    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_name_prompt"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/school_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/main_activity_guideline" />

    <EditText
        android:id="@+id/editTextPersonAge"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_age_prompt"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/department_label"
        app:layout_constraintEnd_toEndOf="@+id/editTextPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPersonName" />

    <EditText
        android:id="@+id/editTextStudentID"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_id_prompt"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/dob_label"
        app:layout_constraintEnd_toEndOf="@+id/editTextPersonAge"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPersonAge" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/save_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="91dp"
        android:layout_height="49dp"
        android:layout_marginTop="76dp"
        android:text="@string/next_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.743"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextStudentID" />


    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/clear_button_text"
        app:layout_constraintTop_toBottomOf="@+id/editTextStudentID"
        tools:layout_editor_absoluteX="85dp"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>