<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uicontroller.AddStudentActivity">

    <TextView
        android:id="@+id/department_label"
        android:layout_width="81dp"
        android:layout_height="23dp"
        android:layout_marginTop="30dp"
        android:text="Department"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/school_label"
        app:layout_constraintTop_toBottomOf="@+id/school_label" />

    <TextView
        android:id="@+id/school_label"
        android:layout_width="63dp"
        android:layout_height="22dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="School"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dob_label"
        android:layout_width="62dp"
        android:layout_height="23dp"
        android:layout_marginTop="30dp"
        android:text="DOB"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/department_label"
        app:layout_constraintTop_toBottomOf="@+id/department_label" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_activity_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="98dp" />


    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/save_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="91dp"
        android:layout_height="49dp"
        android:text="@string/next_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="267dp" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/clear_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/save_button"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/school_spinner"
        android:layout_width="224dp"
        android:layout_height="24dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toEndOf="@+id/school_label"
        tools:layout_editor_absoluteY="28dp"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/department_spinner"
        android:layout_width="224dp"
        android:layout_height="24dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toEndOf="@+id/department_label"
        tools:layout_editor_absoluteY="82dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="160dp"
        android:layout_height="27dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toEndOf="@+id/dob_label"
        tools:layout_editor_absoluteY="131dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/nid_text"
        android:layout_width="184dp"
        android:layout_height="37dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:inputType="number"
        android:text="Enter NID number (10 digit)"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toEndOf="@+id/NID_label"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="182dp" />

    <TextView
        android:id="@+id/NID_label"
        android:layout_width="62dp"
        android:layout_height="23dp"
        android:layout_marginTop="31dp"
        android:text="NID:"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/department_label"
        app:layout_constraintTop_toBottomOf="@+id/dob_label" />


</androidx.constraintlayout.widget.ConstraintLayout>